--- a/part4/.eslintrc.json
+++ b/part4/.eslintrc.json
@@ -15,6 +15,10 @@
       "semi": [
         "error",
         "never"
+      ],
+      "comma-dangle": [
+        "error",
+        "never"
       ]
     }
 }
