--- a/part4/package.json
+++ b/part4/package.json
@@ -4,7 +4,7 @@
   "description": "part4 solutions",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "dev": "nodemon index.js"
   },
   "author": "Eric Miranda",
@@ -15,7 +15,14 @@
     "mongoose": "^5.12.7"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7",
-    "dotenv": "^9.0.1"
+    "dotenv": "^9.0.1",
+    "eslint": "^7.26.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.7"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
