refactor routes to async/await

--- a/part4/.eslintrc.json
+++ b/part4/.eslintrc.json
@@ -19,6 +19,10 @@
       "comma-dangle": [
         "error",
         "never"
+      ],
+      "arrow-parens": [
+        "error",
+        "never"
       ]
     }
 }
