--- a/part4/package.json
+++ b/part4/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "mongoose": "^5.12.7"
+    "mongoose": "^5.12.7",
+    "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
