--- a/part7/bloglist/client/package.json
+++ b/part7/bloglist/client/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "@testing-library/user-event": "^12.6.3",
     "axios": "^0.21.1",
+    "chokidar": "^3.5.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.1",
+    "redux": "^4.1.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
