--- a/part7/bloglist/client/package.json
+++ b/part7/bloglist/client/package.json
@@ -6,8 +6,10 @@
     "@testing-library/user-event": "^12.6.3",
     "axios": "^0.21.1",
     "chokidar": "^3.5.2",
+    "eslint-plugin-react-redux": "^3.3.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
